feat: :sparkles: the components and services are implemented to obtain the voucher data
