# src/app/api/api_actualizar/models/paymentz-card-plots.ts
@@ -6,6 +6,7 @@ export interface PaymentzCardPlots {
   numeroDocumento?: null | string;
   numeroTransaccion?: null | string;
   rop_Datos_Voucher?: null | string;
+  rop_Id_Movimiento?: null | string;
   tipoTransaccion?: null | string;
   userID?: null | string;
   valor?: null | string;
