# src/app/api/api_actualizar/models/response-print-voucher.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ResponsePrintVoucher {
+  data?: null | string;
+}
