# src/app/api/api_actualizar/models/voucher-dto.ts
@@ -4,6 +4,8 @@ import { InvoiceCardPlotsDto } from './invoice-card-plots-dto';
 import { PaymentzCardPlots } from './paymentz-card-plots';
 export interface VoucherDto {
   autorizacion?: null | string;
+  base0?: null | string;
+  base12?: null | string;
   caja?: null | string;
   codigo_Respuesta?: null | string;
   dataInvoice?: null | Array<InvoiceCardPlotsDto>;
@@ -11,7 +13,9 @@ export interface VoucherDto {
   fecha_Tx?: null | string;
   grupo_Tarjeta?: null | string;
   hora_Tx?: null | string;
+  interes?: null | string;
   ipCliente?: null | string;
+  iva?: null | string;
   lote?: null | string;
   mid?: null | string;
   monto?: number;
@@ -22,6 +26,7 @@ export interface VoucherDto {
   plazo?: null | string;
   red_Adquiriente?: null | string;
   respuesta?: null | string;
+  respuestaCompleta?: null | string;
   secuencial?: null | string;
   tid?: null | string;
   tipo_Credito?: null | string;
